Mobile background stretch-fix attempt #3

--- a/css/global.css
+++ b/css/global.css
@@ -1,7 +1,7 @@
 html {
     box-sizing: border-box;
     scroll-behavior: smooth;
-    height: 100%;
+    height: 100vh;
 }
 
 *,
